; ModuleID = '/home/carl/AnghaBench/linux/drivers/gpu/drm/nouveau/nvkm/subdev/mmu/extr_vmm.c_nvkm_vmm_free_delete.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/gpu/drm/nouveau/nvkm/subdev/mmu/extr_vmm.c_nvkm_vmm_free_delete.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.nvkm_vmm = type { i32 }
%struct.nvkm_vma = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.nvkm_vmm*, %struct.nvkm_vma*)* @nvkm_vmm_free_delete to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @nvkm_vmm_free_delete(%struct.nvkm_vmm* %0, %struct.nvkm_vma* %1) #0 {
  %3 = alloca %struct.nvkm_vmm*, align 8
  %4 = alloca %struct.nvkm_vma*, align 8
  store %struct.nvkm_vmm* %0, %struct.nvkm_vmm** %3, align 8
  store %struct.nvkm_vma* %1, %struct.nvkm_vma** %4, align 8
  %5 = load %struct.nvkm_vmm*, %struct.nvkm_vmm** %3, align 8
  %6 = load %struct.nvkm_vma*, %struct.nvkm_vma** %4, align 8
  %7 = call i32 @nvkm_vmm_free_remove(%struct.nvkm_vmm* %5, %struct.nvkm_vma* %6)
  %8 = load %struct.nvkm_vma*, %struct.nvkm_vma** %4, align 8
  %9 = getelementptr inbounds %struct.nvkm_vma, %struct.nvkm_vma* %8, i32 0, i32 0
  %10 = call i32 @list_del(i32* %9)
  %11 = load %struct.nvkm_vma*, %struct.nvkm_vma** %4, align 8
  %12 = call i32 @kfree(%struct.nvkm_vma* %11)
  ret void
}

declare dso_local i32 @nvkm_vmm_free_remove(%struct.nvkm_vmm*, %struct.nvkm_vma*) #1

declare dso_local i32 @list_del(i32*) #1

declare dso_local i32 @kfree(%struct.nvkm_vma*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
